@@ -676,6 +676,7 @@
 				DYLIB_CURRENT_VERSION = 1;
 				FRAMEWORK_VERSION = A;
 				GCC_GENERATE_DEBUGGING_SYMBOLS = NO;
+				GCC_MODEL_TUNING = G4;
 				GCC_OPTIMIZATION_LEVEL = 3;
 				GCC_WARN_FOUR_CHARACTER_CONSTANTS = NO;
 				GCC_WARN_UNKNOWN_PRAGMAS = NO;
@@ -1297,9 +1298,20 @@
 			);
 			buildSettings = {
 				GCC_GENERATE_DEBUGGING_SYMBOLS = NO;
+				GCC_MODEL_TUNING = G4;
 				GCC_OPTIMIZATION_LEVEL = 3;
+				GCC_WARN_ABOUT_MISSING_PROTOTYPES = YES;
 				GCC_WARN_FOUR_CHARACTER_CONSTANTS = NO;
+				GCC_WARN_MISSING_PARENTHESES = YES;
+				GCC_WARN_SHADOW = YES;
+				GCC_WARN_TYPECHECK_CALLS_TO_PRINTF = YES;
+				GCC_WARN_UNINITIALIZED_AUTOS = YES;
 				GCC_WARN_UNKNOWN_PRAGMAS = NO;
+				GCC_WARN_UNUSED_FUNCTION = YES;
+				GCC_WARN_UNUSED_LABEL = YES;
+				GCC_WARN_UNUSED_PARAMETER = YES;
+				GCC_WARN_UNUSED_VALUE = YES;
+				GCC_WARN_UNUSED_VARIABLE = YES;
 				INFOPLIST_FILE = iTerm.plist;
 				OTHER_LDFLAGS = "";
 				OTHER_REZFLAGS = "";
@@ -1339,6 +1351,7 @@
 				8742064C0564169600CFC3F1,
 				8742064D0564169600CFC3F1,
 				DD57633705653C5F00F1905E,
+				F69D78B505FBEA6D009BC3FC,
 			);
 			isa = PBXResourcesBuildPhase;
 			runOnlyForDeploymentPostprocessing = 0;
@@ -2119,6 +2132,21 @@
 			refType = 4;
 			sourceTree = "<group>";
 		};
+		F69D78B405FBEA6D009BC3FC = {
+			fileEncoding = 4;
+			isa = PBXFileReference;
+			lastKnownFileType = text.html.other;
+			name = faq.shtml;
+			path = website/faq.shtml;
+			refType = 4;
+			sourceTree = "<group>";
+		};
+		F69D78B505FBEA6D009BC3FC = {
+			fileRef = F69D78B405FBEA6D009BC3FC;
+			isa = PBXBuildFile;
+			settings = {
+			};
+		};
 		F6FAFD99050E90C300EA4EE7 = {
 			isa = PBXFileReference;
 			lastKnownFileType = image.png;
@@ -2375,6 +2403,7 @@
 				F64B59D405ED49B600FE8ACB,
 				F64B59FA05ED4AA800FE8ACB,
 				F64B5A1705ED4AF000FE8ACB,
+				F69D78B405FBEA6D009BC3FC,
 			);
 			isa = PBXGroup;
 			name = website;
