@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML>
 <HEAD>
-<TITLE>iTerm: Install</TITLE>
+<TITLE>iTerm: Installation</TITLE>
 </HEAD>
 
 <BODY BGCOLOR="#FFFFFF" LINK="#696969" ALINK="#696969" VLINK="#696969">
@@ -19,10 +19,12 @@
 
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
 <FONT SIZE="5"><STRONG>System Requirements:</STRONG></FONT><BR>
-<UL>Mac with Mac OS X 10.2 (Jaguar)</UL>
+<UL>Macs with Mac OS X 10.2 (Jaguar) or 10.3 (Panther)</UL>
 
-<FONT SIZE="5"><STRONG>Install:</STRONG></FONT><BR>
-<UL>Mount the image file and copy iTerm to anywhere you want. If you have an older version, be sure it's either over-written or completely gone (i.e. not in trash). OS X sometimes has weird behavior about that.
+<FONT SIZE="5"><STRONG>Installation:</STRONG></FONT><BR>
+<UL>Mount the image file and copy iTerm.app to anywhere you want. If you have an older version, 
+amke sure it's either over-written or completely gone (i.e. not in trash). OS X sometimes has 
+weird behavior about that.
 </UL>
 
 <FONT SIZE="5"><STRONG>Tips:</STRONG></FONT><BR>
