@@ -5,6 +5,7 @@
 <LI><A HREF="preferences.shtml">Configure Panel</A></LI>
 <LI><A HREF="navigation.shtml">Contextual Menu</A></LI>
 <LI><A HREF="install.shtml">Installation</A></LI>
+<LI><A HREF="faq.shtml">FAQ</A></LI>
 <LI><A HREF="misc.shtml">Misc</A></LI>
 <LI><A HREF="navigation.shtml">Navigation</A></LI>
 <LI><A HREF="screenshot.shtml">Screen Shot</A></LI>
